--- a/css/estilo.css
+++ b/css/estilo.css
@@ -337,6 +337,65 @@ margin-bottom: 1em;
 /* EMPIEZA CUARTO SECTION */
 .servicio{
     background-color: #202024;
+    height: 66vh;
+}
+
+
+.servicio h1 {
+   padding-top: 4em;
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
+    align-items: center;
+    margin-bottom: 1.5em;
+}
+
+.todos{
+    display: flex;
+    justify-content: center;
+    width: 65%;
+    margin: 0 auto;
+    
+    margin-top: 2em;
+}
+.pepe{
+    background-color: #121214;
+    height: 17em;
+    width: 50em;
+    padding: 1.8em 1em;
+    border-radius: 6px;
+}
+
+.pepe h3{
+    
+    text-align: center;
+    margin-top: 2em;
+}
+
+.pepe p{
+    text-align: center;
+    margin-top: 1em;
+    font-weight: bold;
+    
+
+    
+}
+
+.prl{
+    height: 3em;
+    width: 3em;
+    margin-top: 1.5em;
+    
+}
+
+.imagen{
+ 
+    display: flex;
+    justify-content: center;
+}
+
+.separador{
+    margin-right: 3em
 }
 /* TERMINA CUARTO SECTION */
 
